Working FE filtering

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,13 +21,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <meta property="og:title" content="Prison Phone Data Project" />
+    <meta property="og:title" content="Prison Telecom Data Project" />
     <meta property="og:description" content="" />
     <meta
       property="og:image"
       content="https://repository-images.githubusercontent.com/250347048/15514f00-8713-11ea-9f9d-796a89b5de4d"
     />
-    <title>Prison Phone Data Project</title>
+    <title>Prison Telecom Data Project</title>
     <meta
       name="description"
       content=""
