--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,7 +33,7 @@
       content=""
     />
   </head>
-  <body>
+  <body style="overflow: scroll;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
