Readme + index.html updates

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="" />
     <meta
       property="og:image"
-      content="https://repository-images.githubusercontent.com/250347048/15514f00-8713-11ea-9f9d-796a89b5de4d"
+      content="https://raw.githubusercontent.com/PTDP/data/main/logo.png"
     />
     <title>Prison Telecom Data Project</title>
     <meta
