--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- <style>
+    @font-face {
+      font-family: "Sofia-Pro-Medium";
+      src: url("%PUBLIC_URL%/Sofia Pro Medium.otf");
+    }
+
+    @font-face {
+      font-family: "Sofia-Pro";
+      src: url("%PUBLIC_URL%/Sofia Pro Regular.otf");
+    }
+  </style> -->
+  <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
+
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!--
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -21,29 +35,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <meta property="og:title" content="Prison Telecom Data Project" />
-    <meta property="og:description" content="" />
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/PTDP/data/main/logo.png"
-    />
-    <title>Prison Telecom Data Project</title>
-    <meta
-      name="description"
-      content=""
-    />
-  </head>
-  <body style="overflow: scroll;">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  <meta property="og:title" content="#ConnectFamiliesNow Data Project" />
+  <meta property="og:description" content="" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/PTDP/data/main/logo.png" />
+  <title>#ConnectFamiliesNow Data Project</title>
+  <meta name="description" content="" />
+</head>
 
-    <!-- Inter Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+<body style="overflow: scroll;">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
 
-    <!--
+  <!-- Inter Font -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet" /> -->
+
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -53,5 +59,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
