Change og image

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
       src: url("%PUBLIC_URL%/Sofia Pro Regular.otf");
     }
   </style> -->
-  <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -37,7 +37,7 @@
     -->
   <meta property="og:title" content="#ConnectFamiliesNow Data Project" />
   <meta property="og:description" content="" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/PTDP/data/main/logo.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/horizontal_logo_new.png" />
   <title>#ConnectFamiliesNow Data Project</title>
   <meta name="description" content="" />
 </head>
