Remove top banner

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,7 +42,7 @@
   <meta name="description" content="" />
 </head>
 
-<body style="overflow: scroll;">
+<body style="overflow: scroll; padding: 0px;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
